game collection card

--- a/index.html
+++ b/index.html
@@ -580,7 +580,102 @@
             </div>
           </div>
           <div class="flex flex-wrap flex-sb g-cards">
-            <div class="gallary-item"></div>
+            <!-- gallary item 1 -->
+            <div class="gallary-item">
+              <div class="d-overlay">
+                <div class="d-label">20% OFF</div>
+                <div class="d-text">
+                  <h4>Thunder and City</h4>
+                  <p>Starting at <span class="price">$14.99</span></p>
+                  <a href="/post" class="btn_2 w-100">Order Now</a>
+                </div>
+              </div>
+              <img src="images/covers/1.webp" alt="game" class="img-fluid" />
+            </div>
+            <!-- gallary item 2 -->
+            <div class="gallary-item">
+              <div class="d-overlay">
+                <div class="d-label">20% OFF</div>
+                <div class="d-text">
+                  <h4>Mystic Racing Z</h4>
+                  <p>Starting at <span class="price">$14.99</span></p>
+                  <a href="/post" class="btn_2 w-100">Order Now</a>
+                </div>
+              </div>
+              <img src="images/covers/2.webp" alt="game" class="img-fluid" />
+            </div>
+            <!-- gallary item 3 -->
+            <div class="gallary-item">
+              <div class="d-overlay">
+                <div class="d-label">20% OFF</div>
+                <div class="d-text">
+                  <h4>Silent Wrath</h4>
+                  <p>Starting at <span class="price">$14.99</span></p>
+                  <a href="/post" class="btn_2 w-100">Order Now</a>
+                </div>
+              </div>
+              <img src="images/covers/3.webp" alt="game" class="img-fluid" />
+            </div>
+            <!-- gallary item 4 -->
+            <div class="gallary-item">
+              <div class="d-overlay">
+                <div class="d-label">20% OFF</div>
+                <div class="d-text">
+                  <h4>Funk Dungeon</h4>
+                  <p>Starting at <span class="price">$14.99</span></p>
+                  <a href="/post" class="btn_2 w-100">Order Now</a>
+                </div>
+              </div>
+              <img src="images/covers/4.webp" alt="game" class="img-fluid" />
+            </div>
+            <!-- gallary item 5 -->
+            <div class="gallary-item">
+              <div class="d-overlay">
+                <div class="d-label">20% OFF</div>
+                <div class="d-text">
+                  <h4>Galactic Odyssey</h4>
+                  <p>Starting at <span class="price">$14.99</span></p>
+                  <a href="/post" class="btn_2 w-100">Order Now</a>
+                </div>
+              </div>
+              <img src="images/covers/5.webp" alt="game" class="img-fluid" />
+            </div>
+            <!-- gallary item 6 -->
+            <div class="gallary-item">
+              <div class="d-overlay">
+                <div class="d-label">20% OFF</div>
+                <div class="d-text">
+                  <h4>Warfare Legends</h4>
+                  <p>Starting at <span class="price">$14.99</span></p>
+                  <a href="/post" class="btn_2 w-100">Order Now</a>
+                </div>
+              </div>
+              <img src="images/covers/6.webp" alt="game" class="img-fluid" />
+            </div>
+            <!-- gallary item 7 -->
+            <div class="gallary-item">
+              <div class="d-overlay">
+                <div class="d-label">20% OFF</div>
+                <div class="d-text">
+                  <h4>Raceway Revolution</h4>
+                  <p>Starting at <span class="price">$14.99</span></p>
+                  <a href="/post" class="btn_2 w-100">Order Now</a>
+                </div>
+              </div>
+              <img src="images/covers/7.webp" alt="game" class="img-fluid" />
+            </div>
+            <!-- gallary item 8 -->
+            <div class="gallary-item">
+              <div class="d-overlay">
+                <div class="d-label">20% OFF</div>
+                <div class="d-text">
+                  <h4>Starborne Odyssey</h4>
+                  <p>Starting at <span class="price">$14.99</span></p>
+                  <a href="/post" class="btn_2 w-100">Order Now</a>
+                </div>
+              </div>
+              <img src="images/covers/8.webp" alt="game" class="img-fluid" />
+            </div>
           </div>
         </div>
       </section>
