add any_question section

--- a/index.html
+++ b/index.html
@@ -679,6 +679,168 @@
           </div>
         </div>
       </section>
+      <section class="any_question">
+        <div class="container">
+          <div class="flex flex-col flex-left flex-wrap">
+            <div class="w-100">
+              <div class="subtitle mb-1">Do you have</div>
+              <h2 class="title mt-1">Any Qustions?</h2>
+            </div>
+            <div class="flex mt-15 gap-15" id="accordionContainer">
+              <div class="w-50">
+                <!-- 1 -->
+                <div class="accordion-section-title">
+                  <div class="accordion-header">What is game hosting?</div>
+
+                  <div class="accordion-section-content" id="section1">
+                    Game hosting refers to the process of renting or setting up
+                    servers to run multiplayer online games. These servers allow
+                    players to connect and play together in the same game world.
+                  </div>
+                </div>
+                <!-- 2 -->
+                <div class="accordion-section-title">
+                  <div class="accordion-header">
+                    Why do I need game hosting?
+                  </div>
+                  <div class="accordion-section-content" id="section2">
+                    Game hosting is essential for multiplayer gaming. It
+                    provides a dedicated server where players can join, ensuring
+                    a smooth and lag-free gaming experience. It also allows you
+                    to customize game settings and mods.
+                  </div>
+                </div>
+                <!-- 3 -->
+                <div class="accordion-section-title">
+                  <div class="accordion-header">
+                    Is there 24/7 customer support?
+                  </div>
+                  <div class="accordion-section-content" id="section3">
+                    Many reputable game hosting providers offer 24/7 customer
+                    support to assist with technical issues and server
+                    management.
+                  </div>
+                </div>
+                <!-- 4 -->
+                <div class="accordion-section-title">
+                  <div class="accordion-header">
+                    How do I choose a game hosting provider?
+                  </div>
+                  <div class="accordion-section-content" id="section4">
+                    Consider factors like server location, performance,
+                    scalability, customer support, and price when choosing a
+                    game hosting provider. Read reviews and ask for
+                    recommendations from fellow gamers.
+                  </div>
+                </div>
+                <!-- 5 -->
+                <div class="accordion-section-title">
+                  <div class="accordion-header">
+                    What types of games can I host?
+                  </div>
+                  <div class="accordion-section-content" id="section5">
+                    You can host various types of games, including first-person
+                    shooters, role-playing games, survival games, strategy
+                    games, and more. The type of game hosting you need depends
+                    on the game's requirements.
+                  </div>
+                </div>
+              </div>
+              <div class="w-50">
+                <!-- 6 -->
+                <div class="accordion-section-title">
+                  <div class="accordion-header">
+                    What is server latency or ping?
+                  </div>
+                  <div class="accordion-section-content" id="section6">
+                    Server latency or ping measures the time it takes for data
+                    to travel between your computer and the game server. Lower
+                    ping values indicate better responsiveness and less lag.
+                  </div>
+                </div>
+                <!-- 7 -->
+                <div class="accordion-section-title">
+                  <div class="accordion-header">
+                    How do I manage a game server?
+                  </div>
+                  <div class="accordion-section-content" id="section7">
+                    Game server management varies depending on the hosting
+                    provider and game type. Typically, you'll have access to a
+                    control panel or command-line interface to configure
+                    settings, mods, and player access.
+                  </div>
+                </div>
+                <!-- 8 -->
+                <div class="accordion-section-title">
+                  <div class="accordion-header">
+                    Can I run mods on my game server?
+                  </div>
+                  <div class="accordion-section-content" id="section8">
+                    Yes, many game hosting providers support mods. You can
+                    install and manage mods to enhance gameplay or customize the
+                    game to your liking.
+                  </div>
+                </div>
+                <!-- 9 -->
+                <div class="accordion-section-title">
+                  <div class="accordion-header">
+                    What is DDoS protection, and do I need it?
+                  </div>
+                  <div class="accordion-section-content" id="section9">
+                    DDoS (Distributed Denial of Service) protection helps defend
+                    your game server from malicious attacks that could disrupt
+                    gameplay. It's essential for maintaining server stability,
+                    especially for popular games.
+                  </div>
+                </div>
+                <!-- 10 -->
+                <div class="accordion-section-title">
+                  <div class="accordion-header">
+                    How much does game hosting cost?
+                  </div>
+                  <div class="accordion-section-content" id="section10">
+                    Game hosting costs vary depending on the provider, server
+                    type, and game. Prices can range from a few dollars per
+                    month for small servers to hundreds for high-performance
+                    dedicated servers.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="download_now">
+        <div class="container">
+          <div class="download_bg flex p-relative">
+            <div class="w-50">
+              <div class="subtitle mb-1">Download Now</div>
+              <h3 class="title mb-1">Manage your server from mobile device</h3>
+              <p class="mb-1">
+                Enim sit laborum enim ut in excepteur aliqua consequat est ut
+                aliquip nostrud sunt deserunt consequat fugiat adipisicing minim
+                aliquip do adipisicing cupidatat esse ut irure incididunt
+                ullamco dolor laboris anim ea do ut anim.
+              </p>
+              <a href="/"
+                ><img
+                  src="images/misc/download-appstore.webp"
+                  alt="App Store" /></a
+              >&nbsp;
+              <a href="/"
+                ><img
+                  src="images/misc/download-playstore.webp"
+                  alt="Google play"
+              /></a>
+            </div>
+            <img
+              src="images/misc/man-with-phone.webp"
+              alt="Man with phone"
+              class="dw-img"
+            />
+          </div>
+        </div>
+      </section>
     </main>
     <!-- scripts -->
     <!-- ANIMATION ON SCROLL CDN -->
