add responsive and animation

--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
       </div>
     </header>
     <!-- end header -->
-    <div class="ht"></div>
 
     <main>
       <section class="header_bg_data">
@@ -81,7 +80,7 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <!-- slides 1 -->
-              <div class="swiper-slide">
+              <div class="swiper-slide" data-aos="zoom-out-down">
                 <div
                   class="swiper-inner"
                   style="
@@ -92,20 +91,27 @@
                   <div class="sw-caption">
                     <div class="container">
                       <div class="con_data">
-                        <div class="h_blink mb-15">Servers Are Available</div>
-                        <h1 class="slider-title text-uppercase mb-1">
+                        <div class="h_blink mb-15" data-aos="fade-up">
+                          Servers Are Available
+                        </div>
+                        <h1
+                          class="slider-title text-uppercase mb-1"
+                          data-aos="fade-up"
+                        >
                           Galactic Odyssey
                         </h1>
                         <div>
-                          <p class="slider_text">
+                          <p class="slider_text" data-aos="fade-up">
                             Aute esse non magna elit dolore dolore dolor sit
                             est. Ea occaecat ea duis laborum reprehenderit id
                             cillum tempor cupidatat qui nisi proident nostrud
                             dolore
                           </p>
                           <div class="mt-1">
-                            <div class="d_starting">Starting at</div>
-                            <div>
+                            <div class="d_starting" data-aos="fade-up">
+                              Starting at
+                            </div>
+                            <div data-aos="fade-up">
                               <span class="d_cur">$</span>
                               <span class="d_val">9.99</span>
                               <span class="d_period">/monthly</span>
@@ -256,12 +262,12 @@
       <section class="premium_server">
         <div class="container">
           <div class="flex flex-wrap">
-            <div class="w-100">
+            <div class="w-100" data-aos="fade-right">
               <div class="subtitle mtb-1">Incredibly features</div>
               <h2 class="title mb-1">Premium Game Server</h2>
             </div>
             <div class="w-100 flex mt-1 p_de_cont">
-              <div class="p_details">
+              <div class="p_details" data-aos="fade-up">
                 <div>
                   <img src="images/icons/1.png" alt="icons" class="mb20" />
                   <h4>Super Quick Setup</h4>
@@ -271,7 +277,7 @@
                   </p>
                 </div>
               </div>
-              <div class="p_details">
+              <div class="p_details" data-aos="fade-down">
                 <div>
                   <img src="images/icons/2.png" alt="icons" class="mb20" />
                   <h4>Premium Hardware</h4>
@@ -281,7 +287,7 @@
                   </p>
                 </div>
               </div>
-              <div class="p_details">
+              <div class="p_details" data-aos="fade-up">
                 <div>
                   <img src="images/icons/3.png" alt="icons" class="mb20" />
                   <h4>DDos Protection</h4>
@@ -291,7 +297,7 @@
                   </p>
                 </div>
               </div>
-              <div class="p_details">
+              <div class="p_details" data-aos="fade-down">
                 <div>
                   <img src="images/icons/4.png" alt="icons" class="mb20" />
                   <h4>Fast Support</h4>
@@ -312,9 +318,13 @@
               <div class="wh-100 p-relative">
                 <div class="flex game_bg">
                   <div class="w-50">
-                    <div class="subtitle mb-1">Start your game</div>
-                    <h2 class="title">Unlock Your Gaming Full Potential</h2>
-                    <p class="mb-15">
+                    <div class="subtitle mb-1" data-aos="fade-right">
+                      Start your game
+                    </div>
+                    <h2 class="title" data-aos="zoom-out-up">
+                      Unlock Your Gaming Full Potential
+                    </h2>
+                    <p class="mb-15" data-aos="zoom-out-up">
                       Aute esse non magna elit dolore dolore dolor sit est. Ea
                       occaecat ea duis laborum reprehenderit id cillum tempor
                       cupidatat qui nisi proident nostrud dolore id do eiusmod.
@@ -335,14 +345,18 @@
       </section>
       <section class="cust_reviews">
         <div class="container">
-          <div class="cust_reviews-title mb20">
+          <div class="cust_reviews-title mb20" data-aos="fade-right">
             <div class="subtitle mb20">Customer reviews</div>
             <h2 class="title mt-15">4.85 out of 5</h2>
             <div class="mb-15"></div>
           </div>
         </div>
         <div class="custrev">
-          <div class="coment_slick" id="testimonial-carousel">
+          <div
+            class="coment_slick"
+            id="testimonial-carousel"
+            data-aos="fade-up"
+          >
             <!-- item 1 -->
             <div class="item">
               <div class="de_testi type-2">
@@ -536,10 +550,10 @@
       <section class="s-locations">
         <div class="container">
           <div class="flex gap-1">
-            <div class="w-50">
+            <div class="w-50" data-aos="fade-right">
               <img src="images/misc/server.webp" alt="server" />
             </div>
-            <div class="w-50 gap-1">
+            <div class="w-50 gap-1" data-aos="fade-left">
               <div class="subtitle mb-1">Server locations</div>
               <h2 class="title">
                 <span class="text-gradient">25</span> servers available
@@ -572,16 +586,20 @@
         <div class="container mt-3 game-cards">
           <div class="flex flex-sb">
             <div>
-              <div class="subtitle">Most complete</div>
-              <h2 class="title mt-15">Game Collection</h2>
+              <div class="subtitle" data-aos="fade-right">Most complete</div>
+              <h2 class="title mt-15" data-aos="fade-left">Game Collection</h2>
             </div>
             <div>
-              <a href="/" class="btn_2">View all games</a>
+              <a href="/" class="btn_2" data-aos="fade-left">View all games</a>
             </div>
           </div>
           <div class="flex flex-wrap flex-sb g-cards">
             <!-- gallary item 1 -->
-            <div class="gallary-item">
+            <div
+              class="gallary-item"
+              data-aos="zoom-in-down"
+              data-aos-duration="1200"
+            >
               <div class="d-overlay">
                 <div class="d-label">20% OFF</div>
                 <div class="d-text">
@@ -593,7 +611,11 @@
               <img src="images/covers/1.webp" alt="game" class="img-fluid" />
             </div>
             <!-- gallary item 2 -->
-            <div class="gallary-item">
+            <div
+              class="gallary-item"
+              data-aos="zoom-in-down"
+              data-aos-duration="1500"
+            >
               <div class="d-overlay">
                 <div class="d-label">20% OFF</div>
                 <div class="d-text">
@@ -605,7 +627,11 @@
               <img src="images/covers/2.webp" alt="game" class="img-fluid" />
             </div>
             <!-- gallary item 3 -->
-            <div class="gallary-item">
+            <div
+              class="gallary-item"
+              data-aos="zoom-in-down"
+              data-aos-duration="1800"
+            >
               <div class="d-overlay">
                 <div class="d-label">20% OFF</div>
                 <div class="d-text">
@@ -617,7 +643,11 @@
               <img src="images/covers/3.webp" alt="game" class="img-fluid" />
             </div>
             <!-- gallary item 4 -->
-            <div class="gallary-item">
+            <div
+              class="gallary-item"
+              data-aos="zoom-in-down"
+              data-aos-duration="2000"
+            >
               <div class="d-overlay">
                 <div class="d-label">20% OFF</div>
                 <div class="d-text">
@@ -629,7 +659,11 @@
               <img src="images/covers/4.webp" alt="game" class="img-fluid" />
             </div>
             <!-- gallary item 5 -->
-            <div class="gallary-item">
+            <div
+              class="gallary-item"
+              data-aos="zoom-in-up"
+              data-aos-duration="2000"
+            >
               <div class="d-overlay">
                 <div class="d-label">20% OFF</div>
                 <div class="d-text">
@@ -641,7 +675,11 @@
               <img src="images/covers/5.webp" alt="game" class="img-fluid" />
             </div>
             <!-- gallary item 6 -->
-            <div class="gallary-item">
+            <div
+              class="gallary-item"
+              data-aos="zoom-in-up"
+              data-aos-duration="1800"
+            >
               <div class="d-overlay">
                 <div class="d-label">20% OFF</div>
                 <div class="d-text">
@@ -653,7 +691,11 @@
               <img src="images/covers/6.webp" alt="game" class="img-fluid" />
             </div>
             <!-- gallary item 7 -->
-            <div class="gallary-item">
+            <div
+              class="gallary-item"
+              data-aos="zoom-in-up"
+              data-aos-duration="1500"
+            >
               <div class="d-overlay">
                 <div class="d-label">20% OFF</div>
                 <div class="d-text">
@@ -665,7 +707,11 @@
               <img src="images/covers/7.webp" alt="game" class="img-fluid" />
             </div>
             <!-- gallary item 8 -->
-            <div class="gallary-item">
+            <div
+              class="gallary-item"
+              data-aos="zoom-in-up"
+              data-aos-duration="1200"
+            >
               <div class="d-overlay">
                 <div class="d-label">20% OFF</div>
                 <div class="d-text">
@@ -682,12 +728,12 @@
       <section class="any_question">
         <div class="container">
           <div class="flex flex-col flex-left flex-wrap">
-            <div class="w-100">
+            <div class="w-100" data-aos="fade-down">
               <div class="subtitle mb-1">Do you have</div>
               <h2 class="title mt-1">Any Qustions?</h2>
             </div>
             <div class="flex mt-15 gap-15" id="accordionContainer">
-              <div class="w-50">
+              <div class="w-50" data-aos="fade-right">
                 <!-- 1 -->
                 <div class="accordion-section-title">
                   <div class="accordion-header">What is game hosting?</div>
@@ -746,7 +792,7 @@
                   </div>
                 </div>
               </div>
-              <div class="w-50">
+              <div class="w-50" data-aos="fade-left">
                 <!-- 6 -->
                 <div class="accordion-section-title">
                   <div class="accordion-header">
@@ -813,7 +859,7 @@
       <section class="download_now">
         <div class="container">
           <div class="download_bg flex p-relative">
-            <div class="w-50">
+            <div class="w-50" data-aos="fade-up">
               <div class="subtitle mb-1">Download Now</div>
               <h3 class="title mb-1">Manage your server from mobile device</h3>
               <p class="mb-1">
@@ -837,6 +883,7 @@
               src="images/misc/man-with-phone.webp"
               alt="Man with phone"
               class="dw-img"
+              data-aos="zoom-out"
             />
           </div>
         </div>
@@ -844,11 +891,11 @@
       <section class="payment_methods">
         <div class="container">
           <div class="flex flex-sb">
-            <div>
+            <div data-aos="fade-right">
               <div class="subtitle mb-1">Payment Methods</div>
               <h2 class="title">We accept</h2>
             </div>
-            <div>
+            <div data-aos="fade-left">
               <div class="flex gap-15">
                 <div class="py-img">
                   <img
@@ -904,14 +951,18 @@
       <div class="container">
         <div class="flex gap-2 flex-left">
           <div class="w-33">
-            <img src="images/logo.png" alt="logo footer" />
+            <img
+              src="images/logo.png"
+              alt="logo footer"
+              data-aos="fade-right"
+            />
             <p class="mt-1">
               Game Servers Playhost for Gamers Plenty of games Reliable Playhost
               Round-the-clock Support High Performance Servers Global Coverage
               Customized Settings Quick Download Games Unique Features Optimized
               Gameplay Servers for Team Play Flexible Data Security Dedicated
-              Resources Mod Support Custom Plugins Guaranteed Stability
-              Multi-click Connection Regular backups Online monitoring.
+              Resources Mod Support Multi-click Connection Regular backups
+              Online monitoring.
             </p>
           </div>
           <div class="w-33">
@@ -954,7 +1005,7 @@
                 method="post"
                 id="form_subscribe"
               >
-                <div class="text-center">
+                <div class="text-center" data-aos="fade-left">
                   <input
                     type="text"
                     id="txt-subscribe"
